// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog Buttons Invoking dialog button actions should render multiple actions 1`] = `
<DialogButtons__StyledButtonGroup>
  <DialogButtons__ActionButton
    autoFocus={true}
    onClick={[MockFunction]}
    primary={true}
  >
    Primary action
  </DialogButtons__ActionButton>
  <DialogButtons__ActionButton
    onClick={[MockFunction]}
    secondary={true}
  >
    Secondary Action
  </DialogButtons__ActionButton>
  <DialogButtons__ActionButton
    onClick={[MockFunction]}
    tertiary={true}
  >
    Tertiary Action
  </DialogButtons__ActionButton>
</DialogButtons__StyledButtonGroup>
`;

exports[`Dialog Buttons should render the dialog Buttons 1`] = `
<DialogButtons__StyledButtonGroup>
  <DialogButtons__ActionButton
    autoFocus={true}
    onClick={[MockFunction]}
    primary={true}
  >
    Primary action
  </DialogButtons__ActionButton>
</DialogButtons__StyledButtonGroup>
`;
